--- a/DRAGNN/templates/DRAGNN/finish.html
+++ b/DRAGNN/templates/DRAGNN/finish.html
@@ -5,7 +5,9 @@
         {% load strconcat %}
         <meta charset="UTF-8">
         <title>DRAG - Congratulations!</title>
-        {% block resources %} {% include "DRAG/renderresources.html" %} {% endblock %}
+        {% block resources %}
+            {% include "DRAG/renderresources.html" %}
+        {% endblock %}
     </head>
     <body>
         {% block content %}
