--- a/DRAGProj/templates/DRAG/about.html
+++ b/DRAGProj/templates/DRAG/about.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>DRAG - About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% block resources %} {% include 'DRAG/renderresources.html' %} {% endblock %}
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% block resources %}
+        {% include 'DRAG/renderresources.html' %}
+    {% endblock %}
 </head>
 <body>
 <div>
@@ -15,42 +18,53 @@
         <div class="container text-center" id="about">
             <h1>About DRAG</h1>
             <p class="about-section">
-                DRAG is all about generating and diversifying drum music. In the past, musicians have
-                tirelessly put pen to paper in order to produce accompaniment to their music. DRAG
-                simplifies this process by using an Interactive Genetic Algorithm to manipulate a
+                DRAG is all about generating and diversifying drum music. In
+                the past, musicians have tirelessly put pen to paper in order to
+                produce accompaniment to their music. DRAG simplifies this
+                process by using an Interactive Genetic Algorithm to manipulate a
                 drum track which you input.
             </p>
             <div class="row about-section">
                 <div class="col-md-4">
-                    <img src="/DRAG/static/images/drum.png" alt="Small drum in a circle.">
+                    <img src="/DRAG/static/images/drum.png"
+                         alt="Small drum in a circle.">
                 </div>
                 <div class="col-md-4">
-                    <img src="/DRAG/static/images/biology.png" alt="Picture of magnifying class dna.">
+                    <img src="/DRAG/static/images/biology.png"
+                         alt="Picture of magnifying class dna.">
                 </div>
                 <div class="col-md-4">
-                    <img src="/DRAG/static/images/brain.png" alt="A brain.">
+                    <img src="/DRAG/static/images/brain.png"
+                         alt="A brain.">
                 </div>
             </div>
             <p class="about-section">
-                Once you have rated tracks for a number of manual generations, machine learning is used
-                to automatically learn a function representing how you learn tracks. Thus, DRAG automates
-                hundreds of generations for you instantly, before reporting back with the final generation.
+                Once you have rated tracks for a number of manual generations,
+                machine learning is used to automatically learn a function
+                representing how you learn tracks. Thus, DRAG automates
+                hundreds of generations for you instantly, before reporting
+                back with the final generation.
             </p>
             <p class="about-section">
-                DRAG works on drum tracks that consist of two measures at 4:4. 8 beats per bar is DRAG's language.
-                Although simple, it is hoped that you can utilise DRAG to either produce accompaniment you
-                may have not thought of, or help the novice generate accompaniment for their projects.
+                DRAG works on drum tracks that consist of two measures at 4:4.
+                8 beats per bar is DRAG's language. Although simple, it is hoped
+                that you can utilise DRAG to either produce accompaniment you
+                may have not thought of, or help the novice generate
+                accompaniment for their projects.
             </p>
             <div class="row about-section">
                 <div class="col-md-12">
-                    <img class="img-fluid" src="/DRAG/static/images/electric-kit.jpg" style="margin: auto; border-radius: 12px;"
+                    <img class="img-fluid"
+                         src="/DRAG/static/images/electric-kit.jpg"
+                         style="margin: auto; border-radius: 12px;"
                          alt="An electronic drum kit.">
                 </div>
             </div>
             <p class="about-section">
-                DRAG is the work of a dissertation on Interactive Genetic Algorithms and music produced by James
-                Du Plessis. I hope that the tool is both useful and provides you with the fun I intended when
-                building it.
+                DRAG is the work of a dissertation on Interactive Genetic
+                Algorithms and music produced by James Du Plessis. I hope that
+                the tool is both useful and provides you with the fun I
+                intended when building it.
             </p>
         </div>
         {% include 'DRAG/footer.html' %}
