--- a/DRAGProj/templates/DRAG/footer.html
+++ b/DRAGProj/templates/DRAG/footer.html
@@ -2,8 +2,11 @@
     <div class="container-fluid text-center">
         <section id="footer">
             <p>Built in 2017; Original Homegrown Genetic Algorithm</p>
-            <p>Stock images all sourced from <a href="https://pixabay.com/" target="_blank">pixabay</a>. Images are licensed under
-            Creative Commons and are free to use anywhere.</p>
+            <p>Stock images all sourced from
+                <a href="https://pixabay.com/" target="_blank">pixabay</a>.
+                Images are licensed under Creative Commons and are free to use
+                anywhere.
+            </p>
         </section>
     </div>
 {% endblock %}
