--- a/DRAGProj/templates/DRAG/indexbody.html
+++ b/DRAGProj/templates/DRAG/indexbody.html
@@ -18,7 +18,8 @@
             </p>
             <div class="row">
                 <div class="col-md-12">
-                    <img class="img-fluid" src="/DRAG/static/images/dna.jpg" style="border-radius: 50px; margin: auto;"
+                    <img class="img-fluid" src="/DRAG/static/images/dna.jpg"
+                         style="border-radius: 50px; margin: auto;"
                          alt="A picture of dna">
                 </div>
             </div>
@@ -27,7 +28,8 @@
     <div class="container-fluid text-center">
         <section id="diversify">
             <h2>Rhythm Diversifier</h2>
-            <a class="btn btn-lg btn-outline-light" href="/Diversify">Diversify Now</a>
+            <a class="btn btn-lg btn-outline-light"
+               href="/Diversify">Diversify Now</a>
         </section>
     </div>
 {% endblock %}
