--- a/DRAGProj/templates/DRAG/presetform.html
+++ b/DRAGProj/templates/DRAG/presetform.html
@@ -15,7 +15,8 @@
             <div id="preview">
                 <h5>Example - Rock at 200 BPM</h5>
                 <audio controls>
-                    <source src="/DRAG/static/wavfiles/preset_example.wav" type="audio/wav">
+                    <source src="/DRAG/static/wavfiles/preset_example.wav"
+                            type="audio/wav">
                 </audio>
             </div>
             <div class="form-element">
