--- a/DRAGProj/templates/DRAG/startdiversify.html
+++ b/DRAGProj/templates/DRAG/startdiversify.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>DRAG - Genetic Algorithm</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        {% block resources %} {% include 'DRAG/renderresources.html' %} {% endblock %}
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        {% block resources %}
+            {% include 'DRAG/renderresources.html' %}
+        {% endblock %}
     </head>
     <body>
         {% block content %}
