--- a/DRAGNN/templates/DRAGNN/machinelearn.html
+++ b/DRAGNN/templates/DRAGNN/machinelearn.html
@@ -4,7 +4,9 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>DRAG - Machine Learning</title>
-    {% block resources %} {% include "DRAG/renderresources.html" %} {% endblock %}
+    {% block resources %}
+        {% include "DRAG/renderresources.html" %}
+    {% endblock %}
 </head>
 <body>
 {% block content %}
@@ -27,7 +29,8 @@
     {% include "DRAG/bodyscripts.html" %}
     <script src="{% static "js/jquery.blockUI.js" %}"></script>
     <script src="{% static "js/loader.js" %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% static "styles/buttons.css" %}"/>
+    <link rel="stylesheet" type="text/css"
+          href="{% static "styles/buttons.css" %}"/>
 {% endblock %}
 </body>
 </html>
