--- a/DRAGProj/templates/DRAG/500.html
+++ b/DRAGProj/templates/DRAG/500.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>DRAG - Server Error</title>
-        {% block resources %} {% include 'DRAG/renderresources.html' %} {% endblock %}
+        {% block resources %}
+            {% include 'DRAG/renderresources.html' %}
+        {% endblock %}
     </head>
     <body>
         {% block content %}
@@ -15,8 +17,9 @@
                 <div class="col-md-4 offset-md-4 error">
                     <h1>DRAG Error</h1>
                     <p>
-                        Something went wrong, the server appears to be having problems. Go <a href="/Diversify/">
-                        here</a> to diversify a track, or go <a href="/">home</a>.
+                        Something went wrong, the server appears to be having
+                        problems. Go <a href="/Diversify/">here</a> to diversify
+                        a track, or go <a href="/">home</a>.
                     </p>
                 </div>
             </div>
