--- a/DRAGProj/templates/DRAG/fitness.html
+++ b/DRAGProj/templates/DRAG/fitness.html
@@ -5,7 +5,9 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>DRAG - Rate Fitness</title>
-    {% block resources %} {% include "DRAG/renderresources.html" %} {% endblock %}
+    {% block resources %}
+        {% include "DRAG/renderresources.html" %}
+    {% endblock %}
 </head>
 <body>
     {% block content %}
