--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -2,19 +2,23 @@
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">DRAG</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
+            <button type="button" class="navbar-toggler" data-toggle="collapse"
+                    data-target="#drag-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="drag-nav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="#background">Background</a>
+                        <a class="nav-link smooth"
+                           href="#background">Background</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="#diversify">Diversify Now</a>
+                        <a class="nav-link smooth"
+                           href="#diversify">Diversify Now</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="#footer">Footer</a>
+                        <a class="nav-link smooth"
+                           href="#footer">Footer</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/About">About</a>
@@ -31,7 +35,8 @@
     <section id="menu">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">DRAG</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#drag-nav">
+            <button type="button" class="navbar-toggler" data-toggle="collapse"
+                    data-target="#drag-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="drag-nav">
